--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.5",
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "12.18.4"
   }
 }
