--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "aws-amplify": "^3.3.10",
-    "aws-sdk": "^2.853.0",
+    "aws-sdk": "^2.896.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "12.18.4"
